--- a/index.html
+++ b/index.html
@@ -31,6 +31,58 @@
     <main>
       <article>
         <h2>Archons Elements</h2>
+        <p>
+          Each Archon is associated with an element and an ideal, <br />by which they formed their territories' environment and determined their
+          method of governance over their regions.
+        </p>
+        <div class="all-element">
+          <div class="element">
+            <p>Anemo</p>
+            <img src="image/element-anemo.svg" alt="" srcset="" />
+            <p>Freedom</p>
+          </div>
+          <div class="element">
+            <p>Geo</p>
+            <img src="image/element-geo.svg" alt="" srcset="" />
+            <p>Contract</p>
+          </div>
+          <div class="element">
+            <p>Electro</p>
+            <img src="image/element-electro.svg" alt="" srcset="" />
+            <p>Eternity</p>
+          </div>
+          <div class="element">
+            <p>Dendro</p>
+            <img src="image/element-dendro.svg" alt="" srcset="" />
+            <p>Wisdom</p>
+          </div>
+          <div class="element">
+            <p>Hydro</p>
+            <img src="image/element-hydro.svg" alt="" srcset="" />
+            <p>Justice</p>
+          </div>
+          <div class="element">
+            <p>Pyro</p>
+            <img src="image/element-pyro.svg" alt="" srcset="" />
+            <p>War</p>
+          </div>
+          <div class="element">
+            <p>Cryo</p>
+            <img src="image/element-cryo.svg" alt="" srcset="" />
+            <p>Unidentified</p>
+          </div>
+        </div>
+      </article>
+      <article>
+        <div>
+          <div><img src="image/venti.png" alt="" srcset="" /></div>
+          <div>
+            <p>Venti</p>
+            <div><p>Winborne Bard</p></div>
+            <p>One of the many bards of Mondstadt, who freely wanders the city's streets and alleys.</p>
+          </div>
+        </div>
+        <div></div>
       </article>
       <aside></aside>
     </main>
