--- a/index.html
+++ b/index.html
@@ -3,19 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="style/main.css" />
+    <title>The Seven</title>
   </head>
   <body>
     <header>
-      <div>
-        <h1>The Seven Archon of Teyvat</h1>
+      <div class="title">
+        <h1>
+          The Seven Archons <br />
+          of Teyvat
+        </h1>
         <p>
-          Typically shortened to The Seven, are the seven gods who preside over the seven regions ofTeyvat, established after seven gods emerged as
-          the victors of the Archon War 2,000 years ago.
+          Typically shortened to The Seven, are the seven gods who preside over the seven regions of Teyvat, <br />established after seven gods
+          emerged as the victors of the Archon War 2,000 years ago.
         </p>
-        <button>View More</button>
+        <div><button class="view">View More</button></div>
       </div>
-      <div>
+      <div class="paimon">
         <img src="/image/paimon.png" alt="" srcset="" />
       </div>
     </header>
@@ -82,7 +86,37 @@
             <p>One of the many bards of Mondstadt, who freely wanders the city's streets and alleys.</p>
           </div>
         </div>
-        <div></div>
+        <div>
+          <h3>God of Freedom</h3>
+          <div>
+            <p>Known As</p>
+            <div>
+              <p>Barbatos</p>
+              <p>Lord Barbatos</p>
+              <p>Singer of The Skyward Sonnets</p>
+            </div>
+          </div>
+          <div>
+            <p>Introduction</p>
+            <p>
+              A bard that seems to have arrived on some unknown wind — sometimes sings songs as old as the hills, and other times sings poems fresh
+              and new. Likes apples and lively places but is not a fan of cheese or anything sticky. When using his Anemo power to control the wind,
+              it often appears as feathers, as he's fond of that which appears light and breezy.
+            </p>
+          </div>
+          <div>
+            <p>Trailer</p>
+            <iframe
+              width="930"
+              height="523"
+              src="https://www.youtube.com/embed/M9kQP-cmipY"
+              title="Teaser Kisah: Empat Mata Angin (Versi Inggris) | Genshin Impact"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
       </article>
       <aside></aside>
     </main>
