--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
       </div>
     </header>
     <nav>
-      <ul>
-        <li>Barbatos</li>
-        <li>Morax</li>
-        <li>Beelzebul</li>
-        <li>Buer</li>
-        <li>Focalor</li>
+      <ul class="navbar">
+        <li><a href="#">Barbatos</a></li>
+        <li><a href="#">Morax</a></li>
+        <li><a href="#">Beelzebul</a></li>
+        <li><a href="#">Buer</a></li>
+        <li><a href="#">Focalor</a></li>
       </ul>
     </nav>
     <main>
