--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
           Typically shortened to The Seven, are the seven gods who preside over the seven regions of Teyvat, <br />established after seven gods
           emerged as the victors of the Archon War 2,000 years ago.
         </p>
-        <div><button class="view">View More</button></div>
+        <div class="view">
+          <a href="#1">View More</a>
+        </div>
       </div>
       <div class="paimon">
         <img src="/image/paimon.png" alt="" srcset="" />
@@ -33,7 +35,7 @@
       </ul>
     </nav>
     <main>
-      <article>
+      <article class="archon-element" id="1">
         <h2>Archons Elements</h2>
         <p>
           Each Archon is associated with an element and an ideal, <br />by which they formed their territories' environment and determined their
@@ -42,84 +44,176 @@
         <div class="all-element">
           <div class="element">
             <p>Anemo</p>
-            <img src="image/element-anemo.svg" alt="" srcset="" />
-            <p>Freedom</p>
+            <img src="image/element-anemo.svg" alt="anemo" srcset="" />
+            <p class="ideal">Freedom</p>
           </div>
           <div class="element">
             <p>Geo</p>
-            <img src="image/element-geo.svg" alt="" srcset="" />
-            <p>Contract</p>
+            <img src="image/element-geo.svg" alt="geo" srcset="" />
+            <p class="ideal">Contract</p>
           </div>
           <div class="element">
             <p>Electro</p>
-            <img src="image/element-electro.svg" alt="" srcset="" />
-            <p>Eternity</p>
+            <img src="image/element-electro.svg" alt="electro" srcset="" />
+            <p class="ideal">Eternity</p>
           </div>
           <div class="element">
             <p>Dendro</p>
-            <img src="image/element-dendro.svg" alt="" srcset="" />
-            <p>Wisdom</p>
+            <img src="image/element-dendro.svg" alt="dendro" srcset="" />
+            <p class="ideal">Wisdom</p>
           </div>
           <div class="element">
             <p>Hydro</p>
-            <img src="image/element-hydro.svg" alt="" srcset="" />
-            <p>Justice</p>
+            <img src="image/element-hydro.svg" alt="hydro" srcset="" />
+            <p class="ideal">Justice</p>
           </div>
           <div class="element">
             <p>Pyro</p>
-            <img src="image/element-pyro.svg" alt="" srcset="" />
-            <p>War</p>
+            <img src="image/element-pyro.svg" alt="pyro" srcset="" />
+            <p class="ideal">War</p>
           </div>
           <div class="element">
             <p>Cryo</p>
-            <img src="image/element-cryo.svg" alt="" srcset="" />
-            <p>Unidentified</p>
+            <img src="image/element-cryo.svg" alt="cryo" srcset="" />
+            <p class="ideal">Unidentified</p>
           </div>
         </div>
       </article>
-      <article>
-        <div>
-          <div><img src="image/venti.png" alt="" srcset="" /></div>
-          <div>
-            <p>Venti</p>
-            <div><p>Winborne Bard</p></div>
+      <article class="venti">
+        <section class="figure-venti">
+          <div class="image-character"><img src="image/venti.png" alt="venti" srcset="" /></div>
+          <div class="venti-name">
+            <h3>Venti</h3>
+            <div class="venti-title"><p>Winborne Bard</p></div>
             <p>One of the many bards of Mondstadt, who freely wanders the city's streets and alleys.</p>
           </div>
-        </div>
-        <div>
-          <h3>God of Freedom</h3>
-          <div>
+        </section>
+        <section class="details-venti">
+          <h3 class="venti-ideal">God of Freedom</h3>
+          <div class="desc">
             <p>Known As</p>
-            <div>
+            <div class="known-venti">
               <p>Barbatos</p>
               <p>Lord Barbatos</p>
               <p>Singer of The Skyward Sonnets</p>
             </div>
           </div>
+          <h3>Introduction</h3>
           <div>
-            <p>Introduction</p>
             <p>
               A bard that seems to have arrived on some unknown wind — sometimes sings songs as old as the hills, and other times sings poems fresh
               and new. Likes apples and lively places but is not a fan of cheese or anything sticky. When using his Anemo power to control the wind,
               it often appears as feathers, as he's fond of that which appears light and breezy.
             </p>
           </div>
-          <div>
-            <p>Trailer</p>
+          <h3>Trailer</h3>
+          <div class="video">
             <iframe
-              width="930"
-              height="523"
               src="https://www.youtube.com/embed/M9kQP-cmipY"
-              title="Teaser Kisah: Empat Mata Angin (Versi Inggris) | Genshin Impact"
+              title="Character Teaser: The Four Winds (English Version) | Genshin Impact"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               allowfullscreen
             ></iframe>
           </div>
-        </div>
+        </section>
       </article>
-      <aside></aside>
+      <aside>
+        <article class="aside">
+          <figure class="figure-genshin">
+            <img src="image/genshin_impact_logo.png" alt="logo" srcset="" />
+            <figcaption>Genshin Impact</figcaption>
+          </figure>
+          <div class="table">
+            <div class="table-desc">
+              <p><b>Developer</b></p>
+              <div><p>HoyoVerse</p></div>
+            </div>
+            <div class="table-desc">
+              <p><b>Publisher</b></p>
+              <div>
+                <p>HoyoVerse</p>
+                <p>Cognosphere Pte. Ltd.</p>
+              </div>
+            </div>
+            <div class="table-desc">
+              <p><b>Producer</b></p>
+              <div><p>Cai Haoyu</p></div>
+            </div>
+            <div class="table-desc">
+              <p><b>Komposer</b></p>
+              <div>
+                <p>Yu-Peng Chen</p>
+                <p>Dimeng Yuan</p>
+                <p>Qian Ding</p>
+                <p>Yijun Jiang</p>
+                <p>Xin Zhao</p>
+                <p>Archangelo Chen</p>
+                <p>Peijia You</p>
+              </div>
+            </div>
+            <div class="table-desc">
+              <p><b>Engine</b></p>
+              <div><p>Unity</p></div>
+            </div>
+            <div class="table-desc">
+              <p><b>Platform</b></p>
+              <div>
+                <p>Windows</p>
+                <p>Android</p>
+                <p>iOS</p>
+                <p>PS4</p>
+                <p>PS5</p>
+              </div>
+            </div>
+            <div class="table-desc">
+              <p><b>Release</b></p>
+              <div><p>September 28, 2020</p></div>
+            </div>
+            <div class="table-desc">
+              <p><b>Genre</b></p>
+              <div><p>Action-RPG</p></div>
+            </div>
+          </div>
+        </article>
+      </aside>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="about">
+        <div class="desc-seven">
+          <p><strong>The Seventh</strong></p>
+          <p>"The Seventh" is a lore story based on game Genshin Impact,</p>
+        </div>
+        <div class="source">
+          <p><b>Source</b></p>
+          <div>
+            <p><a href="#">Genshin Impact</a></p>
+            <p><a href="#">Genshin Impact Fandom</a></p>
+            <p><a href="#">Hoyowiki</a></p>
+            <p><a href="#">Genshin Impact Youtube</a></p>
+          </div>
+        </div>
+        <div class="support-links">
+          <p><b>Support Links</b></p>
+          <div>
+            <p><a href="#">w3school</a></p>
+            <p><a href="#">CSS-Tricks</a></p>
+            <p><a href="#">Mozilla</a></p>
+            <p><a href="#">CSS Portal</a></p>
+            <p><a href="#">Wikipedia</a></p>
+          </div>
+        </div>
+        <div class="about-me">
+          <p><b>About Me</b></p>
+          <div>
+            <a href="#"><i class="fa-brands fa-square-github"></i></a>
+            <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="copyright">2023 Dicoding Submission</div>
+    </footer>
   </body>
+  <script src="https://kit.fontawesome.com/45941033a1.js" crossorigin="anonymous"></script>
 </html>
