--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
           of Teyvat
         </h1>
         <p>
-          Typically shortened to The Seven, are the seven gods who preside over the seven regions of Teyvat, <br />established after seven gods
-          emerged as the victors of the Archon War 2,000 years ago.
+          Typically shortened to The Seven, are the seven gods who preside over the seven regions of Teyvat, established after seven gods emerged as
+          the victors of the Archon War 2,000 years ago.
         </p>
         <div class="view">
           <a href="#1">View More</a>
@@ -25,21 +25,26 @@
         <img src="/image/paimon.png" alt="" srcset="" />
       </div>
     </header>
-    <nav>
+    <!-- <nav>
       <ul class="navbar">
-        <li><a href="#">Barbatos</a></li>
+        <li><a href="#venti">Barbatos</a></li>
         <li><a href="#">Morax</a></li>
         <li><a href="#">Beelzebul</a></li>
         <li><a href="#">Buer</a></li>
         <li><a href="#">Focalor</a></li>
       </ul>
-    </nav>
+    </nav> -->
+    <!-- <nav>
+      <ul class="navbar">
+        <li><a href="#venti">Barbatos</a></li>
+      </ul>
+    </nav> -->
     <main>
       <article class="archon-element" id="1">
         <h2>Archons Elements</h2>
         <p>
-          Each Archon is associated with an element and an ideal, <br />by which they formed their territories' environment and determined their
-          method of governance over their regions.
+          Each Archon is associated with an element and an ideal, by which they formed their territories' environment and determined their method of
+          governance over their regions.
         </p>
         <div class="all-element">
           <div class="element">
@@ -79,7 +84,7 @@
           </div>
         </div>
       </article>
-      <article class="venti">
+      <article class="venti" id="venti">
         <section class="figure-venti">
           <div class="image-character"><img src="image/venti.png" alt="venti" srcset="" /></div>
           <div class="venti-name">
@@ -182,37 +187,37 @@
       <div class="about">
         <div class="desc-seven">
           <p><strong>The Seventh</strong></p>
-          <p>"The Seventh" is a lore story based on game Genshin Impact,</p>
+          <div class="footer-desc"><p>"The Seventh" is a lore story based on game Genshin Impact,</p></div>
         </div>
         <div class="source">
           <p><b>Source</b></p>
-          <div>
-            <p><a href="#">Genshin Impact</a></p>
-            <p><a href="#">Genshin Impact Fandom</a></p>
-            <p><a href="#">Hoyowiki</a></p>
-            <p><a href="#">Genshin Impact Youtube</a></p>
+          <div class="footer-text">
+            <p><a href="https://genshin.hoyoverse.com/" target="_blank">Genshin Impact</a></p>
+            <p><a href="https://genshin-impact.fandom.com/" target="_blank">Genshin Impact Wiki</a></p>
+            <p><a href="https://wiki.hoyolab.com/" target="_blank">Hoyowiki</a></p>
+            <p><a href="https://www.youtube.com/@GenshinImpact" target="_blank">Genshin Impact Youtube</a></p>
           </div>
         </div>
         <div class="support-links">
           <p><b>Support Links</b></p>
-          <div>
-            <p><a href="#">w3school</a></p>
-            <p><a href="#">CSS-Tricks</a></p>
-            <p><a href="#">Mozilla</a></p>
-            <p><a href="#">CSS Portal</a></p>
-            <p><a href="#">Wikipedia</a></p>
+          <div class="footer-text">
+            <p><a href="https://www.w3schools.com/" target="_blank">w3school</a></p>
+            <p><a href="https://css-tricks.com/" target="_blank">CSS-Tricks</a></p>
+            <p><a href="https://developer.mozilla.org/" target="_blank">Mozilla Developer</a></p>
+            <p><a href="https://www.cssportal.com/" target="_blank">CSS Portal</a></p>
+            <p><a href="https://id.wikipedia.org/wiki/Genshin_Impact" target="_blank">Wikipedia</a></p>
           </div>
         </div>
         <div class="about-me">
           <p><b>About Me</b></p>
-          <div>
-            <a href="#"><i class="fa-brands fa-square-github"></i></a>
+          <div class="footer-about">
+            <a href="https://github.com/Wibrian" target="_blank"><i class="fa-brands fa-square-github"></i></a>
             <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
             <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
           </div>
         </div>
       </div>
-      <div class="copyright">2023 Dicoding Submission</div>
+      <div class="copyright"><p>&copy 2023 Dicoding Submission</p></div>
     </footer>
   </body>
   <script src="https://kit.fontawesome.com/45941033a1.js" crossorigin="anonymous"></script>
