--- a/index.html
+++ b/index.html
@@ -25,20 +25,20 @@
         <img src="/image/paimon.png" alt="" srcset="" />
       </div>
     </header>
-    <!-- <nav>
-      <ul class="navbar">
+    <nav>
+      <ul class="navbar" id="nav">
         <li><a href="#venti">Barbatos</a></li>
         <li><a href="#">Morax</a></li>
         <li><a href="#">Beelzebul</a></li>
         <li><a href="#">Buer</a></li>
         <li><a href="#">Focalor</a></li>
       </ul>
-    </nav> -->
-    <!-- <nav>
-      <ul class="navbar">
-        <li><a href="#venti">Barbatos</a></li>
+      <ul class="navbar-responsive">
+        <li>
+          <button id="down-button"><i class="fa-solid fa-caret-down"></i></button>
+        </li>
       </ul>
-    </nav> -->
+    </nav>
     <main>
       <article class="archon-element" id="1">
         <h2>Archons Elements</h2>
@@ -221,4 +221,5 @@
     </footer>
   </body>
   <script src="https://kit.fontawesome.com/45941033a1.js" crossorigin="anonymous"></script>
+  <script src="main.js"></script>
 </html>
