--- a/index.html
+++ b/index.html
@@ -25,18 +25,21 @@
         <img src="/image/paimon.png" alt="" srcset="" />
       </div>
     </header>
-    <nav>
-      <ul class="navbar" id="nav">
+    <nav id="nav">
+      <ul class="navbar-responsive">
+        <li>
+          <p>The Seven</p>
+        </li>
+        <li>
+          <button id="toggle-button"><i class="fa-solid fa-caret-down"></i></button>
+        </li>
+      </ul>
+      <ul class="navbar">
         <li><a href="#venti">Barbatos</a></li>
         <li><a href="#">Morax</a></li>
         <li><a href="#">Beelzebul</a></li>
         <li><a href="#">Buer</a></li>
         <li><a href="#">Focalor</a></li>
-      </ul>
-      <ul class="navbar-responsive">
-        <li>
-          <button id="down-button"><i class="fa-solid fa-caret-down"></i></button>
-        </li>
       </ul>
     </nav>
     <main>
@@ -187,7 +190,7 @@
       <div class="about">
         <div class="desc-seven">
           <p><strong>The Seventh</strong></p>
-          <div class="footer-desc"><p>"The Seventh" is a lore story based on game Genshin Impact,</p></div>
+          <div class="footer-desc"><p>"The Seventh" is a lore story based on game Genshin Impact</p></div>
         </div>
         <div class="source">
           <p><b>Source</b></p>
@@ -196,16 +199,19 @@
             <p><a href="https://genshin-impact.fandom.com/" target="_blank">Genshin Impact Wiki</a></p>
             <p><a href="https://wiki.hoyolab.com/" target="_blank">Hoyowiki</a></p>
             <p><a href="https://www.youtube.com/@GenshinImpact" target="_blank">Genshin Impact Youtube</a></p>
+            <p><a href="https://id.wikipedia.org/wiki/Genshin_Impact" target="_blank">Wikipedia</a></p>
           </div>
         </div>
         <div class="support-links">
           <p><b>Support Links</b></p>
           <div class="footer-text">
-            <p><a href="https://www.w3schools.com/" target="_blank">w3school</a></p>
+            <p><a href="https://www.w3schools.com/" target="_blank">W3school</a></p>
             <p><a href="https://css-tricks.com/" target="_blank">CSS-Tricks</a></p>
             <p><a href="https://developer.mozilla.org/" target="_blank">Mozilla Developer</a></p>
             <p><a href="https://www.cssportal.com/" target="_blank">CSS Portal</a></p>
-            <p><a href="https://id.wikipedia.org/wiki/Genshin_Impact" target="_blank">Wikipedia</a></p>
+            <p><a href="https://fontawesome.com/" target="_blank">Fontawesome</a></p>
+            <p><a href="https://fonts.google.com/" target="_blank">Google Font</a></p>
+            <p><a href="https://imagecolorpicker.com/" target="_blank">Image Color Picker</a></p>
           </div>
         </div>
         <div class="about-me">
