--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           the victors of the Archon War 2,000 years ago.
         </p>
         <div class="view">
-          <a href="#1">View More</a>
+          <a href="#element">View More</a>
         </div>
       </div>
       <div class="paimon">
@@ -43,7 +43,7 @@
       </ul>
     </nav>
     <main>
-      <article class="archon-element" id="1">
+      <article class="archon-element" id="element">
         <h2>Archons Elements</h2>
         <p>
           Each Archon is associated with an element and an ideal, by which they formed their territories' environment and determined their method of
