Update (add article Zhongli, Raiden, Nahida)

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
       </ul>
       <ul class="navbar">
         <li><a href="#venti">Barbatos</a></li>
-        <li><a href="#">Morax</a></li>
-        <li><a href="#">Beelzebul</a></li>
-        <li><a href="#">Buer</a></li>
+        <li><a href="#zhongli">Morax</a></li>
+        <li><a href="#raiden">Beelzebul</a></li>
+        <li><a href="#nahida">Buer</a></li>
         <li><a href="#">Focalor</a></li>
       </ul>
     </nav>
@@ -89,7 +89,15 @@
       </article>
       <article class="venti" id="venti">
         <section class="figure-venti">
-          <div class="image-character"><img src="image/venti.png" alt="venti" srcset="" /></div>
+          <div class="image-character">
+            <img src="image/venti.png" alt="venti" srcset="" />
+            <div class="sound">
+              <audio id="audio">
+                <source src="audio/horse.mp3" type="audio/mp3" />
+              </audio>
+              <button id="play"><i class="fa-solid fa-circle-play"></i></button>
+            </div>
+          </div>
           <div class="venti-name">
             <h3>Venti</h3>
             <div class="venti-title"><p>Winborne Bard</p></div>
@@ -119,6 +127,152 @@
             <iframe
               src="https://www.youtube.com/embed/M9kQP-cmipY"
               title="Character Teaser: The Four Winds (English Version) | Genshin Impact"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </section>
+      </article>
+      <article class="zhongli" id="zhongli">
+        <section class="figure-zhongli">
+          <div class="image-character">
+            <img src="image/zhongli.png" alt="zhongli" srcset="" />
+            <div class="sound">
+              <audio id="audio">
+                <source src="audio/horse.mp3" type="audio/mp3" />
+              </audio>
+              <button id="play"><i class="fa-solid fa-circle-play"></i></button>
+            </div>
+          </div>
+          <div class="zhongli-name">
+            <h3>Zhongli</h3>
+            <div class="zhongli-title"><p>Vago Mundo</p></div>
+            <p>A mysterious expert contracted by the Wangsheng Funeral Parlor. Extremely knowledgeable in all things.</p>
+          </div>
+        </section>
+        <section class="details-zhongli">
+          <h3 class="zhongli-ideal">God of Contract</h3>
+          <div class="desc-zhongli">
+            <p>Known As</p>
+            <div class="known-zhongli">
+              <p>Morax</p>
+              <p>Wangsheng Funeral Parlor Consultant</p>
+            </div>
+          </div>
+          <h3>Introduction</h3>
+          <div>
+            <p>
+              Wangsheng Funeral Parlor's mysterious consultant. Handsome, elegant, and surpassingly learned. Though no one knows where Zhongli is
+              from, he is a master of courtesy and rules. From his seat at Wangsheng Funeral Parlor, he performs all manner of rituals.
+            </p>
+          </div>
+          <h3>Trailer</h3>
+          <div class="video">
+            <iframe
+              src="https://www.youtube.com/embed/CvCzYbVei04"
+              title='Kisah Karakter - "Zhongli: Biaya Tambahan" | Genshin Impact'
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </section>
+      </article>
+      <article class="raiden" id="raiden">
+        <section class="figure-raiden">
+          <div class="image-character">
+            <img src="image/raiden.png" alt="raiden" srcset="" />
+            <div class="sound">
+              <audio id="audio">
+                <source src="audio/horse.mp3" type="audio/mp3" />
+              </audio>
+              <button id="play"><i class="fa-solid fa-circle-play"></i></button>
+            </div>
+          </div>
+          <div class="raiden-name">
+            <h3>Raiden Shogun</h3>
+            <div class="raiden-title"><p>Plane of Euthymia</p></div>
+            <p>Her Excellency, the Almighty Narukami Ogosho, who promised the people of Inazuma an unchanging Eternity.</p>
+          </div>
+        </section>
+        <section class="details-raiden">
+          <h3 class="raiden-ideal">God of Eternity</h3>
+          <div class="desc">
+            <p>Known As</p>
+            <div class="known-raiden">
+              <p>Beelzebul</p>
+              <p>Raiden Ei</p>
+              <p>Narukami Ogosho</p>
+              <p>Master of the Euthymic Plane</p>
+              <p>The Almighty Shogun</p>
+              <p>The Immortal Shogun</p>
+            </div>
+          </div>
+          <h3>Introduction</h3>
+          <div class="intro-raiden">
+            <p>
+              The Raiden Shogun is the awesome and terrible power of thunder incarnate, the exalted ruler of the Inazuma Shogunate. With the might of
+              lightning at her disposal, she commits herself to the solitary pursuit of eternity.
+            </p>
+            <p>
+              <em>
+                "The Raiden Shogun is comprised of two beings in one body: <strong>Ei</strong>, the current Electro Archon of Inazuma; and
+                <strong>The Shogun</strong>, the puppet created by Ei to act as the ruler of Inazuma in her stead."
+              </em>
+            </p>
+          </div>
+          <h3>Trailer</h3>
+          <div class="video">
+            <iframe
+              src="https://www.youtube.com/embed/ydPqFAEgHzs"
+              title='Kisah Karakter: "Raiden Shogun — Mimpi Buruk" | Genshin Impact'
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </section>
+      </article>
+      <article class="nahida" id="nahida">
+        <section class="figure-nahida">
+          <div class="image-character">
+            <img src="image/nahida.png" alt="nahida" srcset="" />
+            <div class="sound">
+              <audio id="audio">
+                <source src="audio/horse.mp3" type="audio/mp3" />
+              </audio>
+              <button id="play"><i class="fa-solid fa-circle-play"></i></button>
+            </div>
+          </div>
+          <div class="nahida-name">
+            <h3>Nahida</h3>
+            <div class="nahida-title"><p>Physic of Purity</p></div>
+            <p>A caged bird secluded within the confines of the Sanctuary of Surasthana who can only see the world in her dreams.</p>
+          </div>
+        </section>
+        <section class="details-nahida">
+          <h3 class="nahida-ideal">God of Wisdom</h3>
+          <div class="desc-nahida">
+            <p>Known As</p>
+            <div class="known-nahida">
+              <p>Morax</p>
+              <p>Wangsheng Funeral Parlor Consultant</p>
+            </div>
+          </div>
+          <h3>Introduction</h3>
+          <div>
+            <p>
+              Lesser Lord Kusanali dwells deep in the Sanctuary of Surasthana, and has never really been in the limelight, nor has she even been
+              mentioned much. Her burden is heavy, but though she may experience loneliness, and though darkness is all she sees before her, she will
+              not stop moving forward.
+            </p>
+          </div>
+          <h3>Trailer</h3>
+          <div class="video">
+            <iframe
+              src="https://www.youtube.com/embed/DWlWuVU4ZiI"
+              title='Kisah Karakter: "Nahida — Selamat Ulang Tahun" | Genshin Impact'
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               allowfullscreen
