Update for Responsive

--- a/index.html
+++ b/index.html
@@ -91,12 +91,6 @@
         <section class="figure-venti">
           <div class="image-character">
             <img src="image/venti.png" alt="venti" srcset="" />
-            <div class="sound">
-              <audio id="audio">
-                <source src="audio/horse.mp3" type="audio/mp3" />
-              </audio>
-              <button id="play"><i class="fa-solid fa-circle-play"></i></button>
-            </div>
           </div>
           <div class="venti-name">
             <h3>Venti</h3>
@@ -138,12 +132,6 @@
         <section class="figure-zhongli">
           <div class="image-character">
             <img src="image/zhongli.png" alt="zhongli" srcset="" />
-            <div class="sound">
-              <audio id="audio">
-                <source src="audio/horse.mp3" type="audio/mp3" />
-              </audio>
-              <button id="play"><i class="fa-solid fa-circle-play"></i></button>
-            </div>
           </div>
           <div class="zhongli-name">
             <h3>Zhongli</h3>
@@ -183,12 +171,6 @@
         <section class="figure-raiden">
           <div class="image-character">
             <img src="image/raiden.png" alt="raiden" srcset="" />
-            <div class="sound">
-              <audio id="audio">
-                <source src="audio/horse.mp3" type="audio/mp3" />
-              </audio>
-              <button id="play"><i class="fa-solid fa-circle-play"></i></button>
-            </div>
           </div>
           <div class="raiden-name">
             <h3>Raiden Shogun</h3>
@@ -238,12 +220,6 @@
         <section class="figure-nahida">
           <div class="image-character">
             <img src="image/nahida.png" alt="nahida" srcset="" />
-            <div class="sound">
-              <audio id="audio">
-                <source src="audio/horse.mp3" type="audio/mp3" />
-              </audio>
-              <button id="play"><i class="fa-solid fa-circle-play"></i></button>
-            </div>
           </div>
           <div class="nahida-name">
             <h3>Nahida</h3>
@@ -256,8 +232,10 @@
           <div class="desc-nahida">
             <p>Known As</p>
             <div class="known-nahida">
-              <p>Morax</p>
-              <p>Wangsheng Funeral Parlor Consultant</p>
+              <p>Buer</p>
+              <p>Lesser Lord Kusanali</p>
+              <p>The First Akasha Terminal</p>
+              <!-- <p>Blessed One of Wisdom, Mahakusaladhamma</p> -->
             </div>
           </div>
           <h3>Introduction</h3>
